--- a/index.html
+++ b/index.html
@@ -3,24 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pushan Singh | Information Security Analyst</title>
+    <title>Pushan Singh | InfoSec Analyst</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <nav>
+        <ul>
+            <li><a href="#about">About Me</a></li>
+            <li><a href="#education">Education</a></li>
+            <li><a href="#certification">Certifications</a></li>
+            <li><a href="#quote">Quote</a></li>
+            <li><a href="https://www.linkedin.com/in/pushansingh/" target="_blank">LinkedIn</a></li>
+        </ul>
+    </nav>
     <header>
-        <h1>Pushan Singh</h1>
-        <h2>Information Security Analyst</h2>
+        <div class="header-content">
+            <h1>&lt; Pushan Singh /&gt;</h1>
+            <h2 class="typewriter">Information Security Analyst</h2>
+        </div>
     </header>
     <section id="about">
         <h3>About Me</h3>
-        <p>Hi there! I'm Pushan Singh, a 25-year-old Information Security Analyst with a passion for keeping data secure and systems robust. I hold a BTech in Computer Science and Engineering.</p>
+        <p>Hi there! I'm Pushan Singh, a 25-year-old Information Security Analyst at TO THE NEW with a passion for keeping data secure and systems robust. I enjoy tackling complex security challenges and continuously enhancing my skills in the ever-evolving field of cybersecurity.</p>
     </section>
-    <section id="favorites">
-        <h3>Favorites</h3>
-        <p><strong>Favorite TV Show:</strong> Breaking Bad</p>
+    <section id="education">
+        <h3>Education</h3>
+        <p><strong>Amity University</strong></p>
+        <p>Bachelor of Technology (BTech), Computer Science</p>
+        <p>2018 - 2022</p>
+    </section>
+    <section id="certification">
+        <h3>Certifications</h3>
+        <p><strong>Junior Penetration Tester</strong></p>
+        <p>INE</p>
+    </section>
+    <section id="quote">
+        <h3>Favorite Quote</h3>
+        <blockquote>"I am not a leader. I am a messenger. The world is a dangerous place, Elliot, not because of those who do evil, but because of those who look on and do nothing." - Mr. Robot</blockquote>
     </section>
     <footer>
         <p>Connect with me on <a href="https://www.linkedin.com/in/pushansingh/" target="_blank">LinkedIn</a></p>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
