color scheme correction

--- a/index.html
+++ b/index.html
@@ -42,7 +42,11 @@
         <blockquote>"I am not a leader. I am a messenger. The world is a dangerous place, Elliot, not because of those who do evil, but because of those who look on and do nothing." - Mr. Robot</blockquote>
     </section>
     <footer>
-        <p>Connect with me on <a href="https://www.linkedin.com/in/pushansingh/" target="_blank">LinkedIn</a></p>
+        <p>Connect with me on 
+            <a href="https://www.linkedin.com/in/pushansingh/" target="_blank">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png" alt="LinkedIn" width="20" height="20">
+            </a>
+        </p>
     </footer>
     <script src="script.js"></script>
 </body>
