--- a/index.html
+++ b/index.html
@@ -18,36 +18,35 @@
     </nav>
     <header>
         <div class="header-content">
-            <h1>&lt; Pushan Singh /&gt;</h1>
-            <h2 class="typewriter">Information Security Analyst</h2>
+            <h1 class="neon">Pushan Singh</h1>
+            <h2 class="glow">Information Security Analyst</h2>
         </div>
     </header>
     <section id="about">
         <h3>About Me</h3>
-        <p>Hi there! I'm Pushan Singh, a 25-year-old Information Security Analyst at TO THE NEW with a passion for keeping data secure and systems robust. I enjoy tackling complex security challenges and continuously enhancing my skills in the ever-evolving field of cybersecurity.</p>
+        <p>Hello! I'm Pushan Singh, an Information Security Analyst at TO THE NEW. I specialize in identifying and mitigating security threats to ensure the protection of sensitive information. My passion for cybersecurity drives me to continuously learn and stay updated with the latest industry trends and technologies.</p>
     </section>
     <section id="education">
         <h3>Education</h3>
-        <p><strong>Amity University</strong></p>
-        <p>Bachelor of Technology (BTech), Computer Science</p>
-        <p>2018 - 2022</p>
+        <p>Bachelor of Technology (BTech) in Computer Science from Amity University, 2022</p>
     </section>
     <section id="certification">
         <h3>Certifications</h3>
-        <p><strong>Junior Penetration Tester</strong></p>
-        <p>INE</p>
+        <p>Junior Penetration Tester from INE</p>
     </section>
     <section id="quote">
-        <h3>Favorite Quote</h3>
-        <blockquote>"I am not a leader. I am a messenger. The world is a dangerous place, Elliot, not because of those who do evil, but because of those who look on and do nothing." - Mr. Robot</blockquote>
+        <h3>Quote</h3>
+        <blockquote>
+            "I have not failed. I've just found 10,000 ways that won't work." - Thomas Edison
+        </blockquote>
     </section>
     <footer>
         <p>Connect with me on 
             <a href="https://www.linkedin.com/in/pushansingh/" target="_blank">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png" alt="LinkedIn" width="20" height="20">
+                LinkedIn <img src="linkedin-icon.png" alt="LinkedIn" width="20" height="20">
             </a>
         </p>
     </footer>
-    <script src="script.js"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
