--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pushan Singh | InfoSec Analyst</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 </head>
 <body>
+    <div id="particles-js"></div>
     <nav>
         <ul>
             <li><a href="#about">About Me</a></li>
@@ -18,29 +21,29 @@
     </nav>
     <header>
         <div class="header-content">
-            <h1 class="neon">Pushan Singh</h1>
-            <h2 class="glow">Information Security Analyst</h2>
+            <h1 class="neon animate__animated animate__flash">Pushan Singh</h1>
+            <h2 class="glow animate__animated animate__flash">Information Security Analyst</h2>
         </div>
     </header>
-    <section id="about">
+    <section id="about" class="animate__animated animate__fadeInLeft">
         <h3>About Me</h3>
         <p>Hello! I'm Pushan Singh, an Information Security Analyst at TO THE NEW. I specialize in identifying and mitigating security threats to ensure the protection of sensitive information. My passion for cybersecurity drives me to continuously learn and stay updated with the latest industry trends and technologies.</p>
     </section>
-    <section id="education">
+    <section id="education" class="animate__animated animate__fadeInRight">
         <h3>Education</h3>
         <p>Bachelor of Technology (BTech) in Computer Science from Amity University, 2022</p>
     </section>
-    <section id="certification">
+    <section id="certification" class="animate__animated animate__fadeInLeft">
         <h3>Certifications</h3>
         <p>Junior Penetration Tester from INE</p>
     </section>
-    <section id="quote">
+    <section id="quote" class="animate__animated animate__fadeInRight">
         <h3>Quote</h3>
         <blockquote>
             "I have not failed. I've just found 10,000 ways that won't work." - Thomas Edison
         </blockquote>
     </section>
-    <footer>
+    <footer class="animate__animated animate__fadeIn">
         <p>Connect with me on 
             <a href="https://www.linkedin.com/in/pushansingh/" target="_blank">
                 LinkedIn <img src="linkedin-icon.png" alt="LinkedIn" width="20" height="20">
